src/pages/learn/[mission]/Stage.module.css
.stage-content-wrapper {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 2fr;
  grid-column-gap: 0px;
}

@media screen and (min-width: 900px) {
  .stage-content {
    display: grid;
    grid-template-columns: 2fr auto;
  }

  .stage-content-wrapper {
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    grid-column-gap: 30px;
  }
}

.stage-title {
  font-size: 2rem;
  font-weight: 600;
  margin-bottom: 2.5rem;
}

.stage-title .stage-title-addendum {
  color: rgb(188, 188, 188);
  font-size: 1.5rem;
  font-weight: 500;
}

.description-wrapper {
  background-color: rgba(0, 0, 0, 0.5);
  border-radius: 0.25rem;
  padding: 1.5rem;
}

.move-to-next-video {
  display: flex;
  align-items: center;
  padding: 10px 0px;
  border-bottom: 1px solid white;
  margin-bottom: 10px;
  font-style: italic;
}

